examples/invalid/ns/hello_bad_unit.ns
mod cpu UnknownUnit {
  fn main() {
    print(1);
  }
}
